--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -25,7 +25,6 @@
   }
 }
 
-
 .animate-input {
   animation: slideRight 1s ease-out;
 }
@@ -41,3 +40,21 @@
   }
 }
 
+mat-form-field {
+  width: 100%;
+}
+
+.titulo-animado {
+  animation: fadeIn 1s ease-out;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
