--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,12 +1,12 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Formulario</ion-title>
+    <ion-title>Home</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content class="ion-padding">
   <div class="contenido-centrado">
-    <h2 class="titulo-animado">Registrar {{ usuario }}!</h2>
+    <h2 class="titulo-animado">Registrate {{ usuario }}!</h2>
 
 
     <ion-item>
