--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,11 +1,15 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Login</ion-title>
+    <ion-title class="titulo-animado">Login</ion-title>
   </ion-toolbar>
 </ion-header>
 
+<ion-content class="ion-padding">
+  <div class="contenido-centrado">
+    <h2 class="titulo-animado"> Ingresar {{ usuario }}</h2>
+
 <ion-content>
-  <form [formGroup]="loginForm" (ngSubmit)="ingresar()">
+  <form [formGroup]="loginForm" (ngSubmit)="ingresar()" class="contenido-centrado">
     <ion-item>
       <ion-label position="floating">Usuario</ion-label>
       <ion-input
