--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -8,34 +8,35 @@
   <div class="contenido-centrado">
     <h2 class="titulo-animado"> Ingresar {{ usuario }}</h2>
 
-<ion-content>
-  <form [formGroup]="loginForm" (ngSubmit)="ingresar()" class="contenido-centrado">
-    <ion-item>
-      <ion-label position="floating">Usuario</ion-label>
-      <ion-input
-        type="text"
-        formControlName="usuario"
-      ></ion-input>
-    </ion-item>
-    <div *ngIf="loginForm.get('usuario')?.invalid && (loginForm.get('usuario')?.touched || loginForm.get('usuario')?.dirty)" class="error-message">
-      <ion-text color="danger" *ngIf="loginForm.get('usuario')?.errors?.['required']">El usuario es obligatorio.</ion-text>
-      <ion-text color="danger" *ngIf="loginForm.get('usuario')?.errors?.['minlength']">Mínimo 3 caracteres.</ion-text>
-      <ion-text color="danger" *ngIf="loginForm.get('usuario')?.errors?.['maxlength']">Máximo 8 caracteres.</ion-text>
-      <ion-text color="danger" *ngIf="loginForm.get('usuario')?.errors?.['pattern']">Solo letras y números.</ion-text>
-    </div>
+    <form [formGroup]="loginForm" (ngSubmit)="ingresar()" class="contenido-centrado">
+      <ion-item>
+        <ion-label position="floating">Usuario</ion-label>
+        <ion-input
+          type="text"
+          formControlName="usuario"
+        ></ion-input>
+      </ion-item>
+      <div *ngIf="loginForm.get('usuario')?.invalid && (loginForm.get('usuario')?.touched || loginForm.get('usuario')?.dirty)" class="error-message">
+        <ion-text color="danger" *ngIf="loginForm.get('usuario')?.errors?.['required']">El usuario es obligatorio.</ion-text>
+        <ion-text color="danger" *ngIf="loginForm.get('usuario')?.errors?.['minlength']">Mínimo 3 caracteres.</ion-text>
+        <ion-text color="danger" *ngIf="loginForm.get('usuario')?.errors?.['maxlength']">Máximo 8 caracteres.</ion-text>
+        <ion-text color="danger" *ngIf="loginForm.get('usuario')?.errors?.['pattern']">Solo letras y números.</ion-text>
+      </div>
 
-    <ion-item>
-      <ion-label position="floating">Contraseña</ion-label>
-      <ion-input
-        type="password"
-        formControlName="password"
-      ></ion-input>
-    </ion-item>
-    <div *ngIf="loginForm.get('password')?.invalid && (loginForm.get('password')?.touched || loginForm.get('password')?.dirty)" class="error-message">
-      <ion-text color="danger" *ngIf="loginForm.get('password')?.errors?.['required']">La contraseña es obligatoria.</ion-text>
-      <ion-text color="danger" *ngIf="loginForm.get('password')?.errors?.['pattern']">Debe ser 4 dígitos numéricos.</ion-text>
-    </div>
+      <ion-item>
+        <ion-label position="floating">Contraseña</ion-label>
+        <ion-input
+          type="password"
+          formControlName="password"
+        ></ion-input>
+      </ion-item>
+      <div *ngIf="loginForm.get('password')?.invalid && (loginForm.get('password')?.touched || loginForm.get('password')?.dirty)" class="error-message">
+        <ion-text color="danger" *ngIf="loginForm.get('password')?.errors?.['required']">La contraseña es obligatoria.</ion-text>
+        <ion-text color="danger" *ngIf="loginForm.get('password')?.errors?.['pattern']">Debe ser 4 dígitos numéricos.</ion-text>
+      </div>
 
-    <ion-button expand="full" type="submit" [disabled]="loginForm.invalid">Ingresar</ion-button>
-  </form>
+      <ion-button expand="full" type="submit" [disabled]="loginForm.invalid">Ingresar</ion-button>
+      <ion-button expand="full" color="success" (click)="ingresar()">Ingresar al Home</ion-button>
+    </form>
+  </div>
 </ion-content>
