--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -6,7 +6,7 @@
 
 <ion-content class="ion-padding">
   <div class="contenido-centrado">
-    <h2 class="titulo-animado">Formulario {{ usuario }}!</h2>
+    <h2 class="titulo-animado">Registro{{ usuario }}</h2>
 
 
     <ion-item>
