--- a/src/app/home/home.page (3).html
+++ b/src/app/home/home.page (3).html
@@ -1,41 +1,26 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Home</ion-title>
+    <ion-title>Formulario</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content class="ion-padding">
   <div class="contenido-centrado">
-    <h2 class="titulo-animado">Formulario {{ usuario }}!</h2>
-
+    <h2>Registrar {{ usuario }}!</h2>
 
     <ion-item>
       <ion-label position="floating">Nombre</ion-label>
-      <ion-input
-        id="nombreInput"
-        [(ngModel)]="nombre"
-        type="text"
-        name="nombre"
-      ></ion-input>
+      <ion-input [(ngModel)]="nombre" type="text" name="nombre"></ion-input>
     </ion-item>
 
     <ion-item>
       <ion-label position="floating">Apellido</ion-label>
-      <ion-input
-        id="apellidoInput"
-        [(ngModel)]="apellido"
-        type="text"
-        name="apellido"
-      ></ion-input>
+      <ion-input [(ngModel)]="apellido" type="text" name="apellido"></ion-input>
     </ion-item>
 
     <ion-item>
       <ion-label>Nivel de educación</ion-label>
-      <ion-select
-        [(ngModel)]="nivelEducacion"
-        interface="popover"
-        name="educacion"
-      >
+      <ion-select [(ngModel)]="nivelEducacion" interface="popover" name="educacion">
         <ion-select-option value="Básica">Básica</ion-select-option>
         <ion-select-option value="Media">Media</ion-select-option>
         <ion-select-option value="Superior">Superior</ion-select-option>
@@ -44,17 +29,7 @@
 
     <ion-item>
       <ion-label position="floating">Fecha de nacimiento</ion-label>
-      <mat-form-field appearance="fill" style="width: 100%;">
-        <input
-          matInput
-          [matDatepicker]="picker"
-          placeholder="Seleccione fecha"
-          [(ngModel)]="fechaNacimiento"
-          name="fechaNacimiento"
-        />
-        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-        <mat-datepicker #picker></mat-datepicker>
-      </mat-form-field>
+      <ion-datetime display-format="DD/MM/YYYY" [(ngModel)]="fechaNacimiento" name="fecha"></ion-datetime>
     </ion-item>
 
     <ion-button expand="block" (click)="mostrar()">Mostrar</ion-button>
