--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -6,7 +6,7 @@
 
 <ion-content class="ion-padding">
   <div class="contenido-centrado">
-    <h2 class="titulo-animado"> Bienvenido {{ usuario }}</h2>
+    <h2 class="titulo-animado"> Ingresar {{ usuario }}</h2>
 
 <ion-content>
   <form [formGroup]="loginForm" (ngSubmit)="ingresar()" class="contenido-centrado">
