--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -6,8 +6,6 @@
 
 <ion-content class="ion-padding">
   <div class="contenido-centrado">
-    <h2 class="titulo-animado">Formulario {{ usuario }}!</h2>
-
 
     <ion-item>
       <ion-label position="floating">Nombre</ion-label>
@@ -59,5 +57,6 @@
 
     <ion-button expand="block" (click)="mostrar()">Mostrar</ion-button>
     <ion-button expand="block" color="medium" (click)="limpiar()">Limpiar</ion-button>
+    <ion-button expand="block" color="secondary" (click)="irALogin()">Login</ion-button>
   </div>
 </ion-content>
