--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -42,17 +42,12 @@
 
     <ion-item>
       <ion-label position="floating">Fecha de nacimiento</ion-label>
-      <mat-form-field appearance="fill" style="width: 100%;">
-        <input
-          matInput
-          [matDatepicker]="picker"
-          placeholder="Seleccione fecha"
-          [(ngModel)]="fechaNacimiento"
-          name="fechaNacimiento"
-        />
-        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-        <mat-datepicker #picker></mat-datepicker>
-      </mat-form-field>
+      <ion-datetime
+        display-format="DD/MM/YYYY"
+        placeholder="Seleccione fecha"
+        [(ngModel)]="fechaNacimiento"
+        name="fechaNacimiento"
+      ></ion-datetime>
     </ion-item>
 
     <ion-button expand="block" (click)="mostrar()">Mostrar</ion-button>
