--- a/src/app/principal/principal.page.html
+++ b/src/app/principal/principal.page.html
@@ -1,15 +1,15 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>Principal</ion-title>
+    <ion-title>Gestiona tu mente</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Principal</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <ion-button expand="block" color="secondary" (click)="irALogin()">Login</ion-button>
+<ion-content>
+  <div class="contenido-centrado">
+    <img src="assets/imagenes/logo.png" alt="Logo" class="img-centrada" onerror="this.src='https://ionicframework.com/docs/img/demos/logo.svg'" />
+    <div class="botones-contenedor">
+      <ion-button expand="block" color="primary" (click)="irARegistro1()">Registrate</ion-button>
+      <ion-button expand="block" color="primary" (click)="irALogin()">ingresa</ion-button>
+    </div>
+  </div>
 </ion-content>
