--- a/src/app/principal/principal.page.html
+++ b/src/app/principal/principal.page.html
@@ -1,9 +1,3 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>Principal</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
@@ -11,5 +5,14 @@
     </ion-toolbar>
   </ion-header>
 
-  <ion-button expand="block" color="secondary" (click)="irALogin()">Login</ion-button>
+<div class="logo-container">
+  <img src="assets\imagenes\aa8cd491-a400-4d12-9420-9a5b2e45da29.png" 
+  alt="Company logo featuring a stylized blue and green abstract shape centered on a white background, conveying a modern and welcoming atmosphere. No visible text." 
+  class="logo-img" />
+</div>
+
+
+  <ion-button expand="full" color="secondary" (click)="irALogin()">
+    Login
+  </ion-button>
 </ion-content>
