--- a/src/app/principal/principal.page.html
+++ b/src/app/principal/principal.page.html
@@ -12,7 +12,5 @@
 </div>
 
 
-  <ion-button expand="full" color="secondary" (click)="irALogin()">
-    Login
-  </ion-button>
+  <ion-button expand="full" color="secondary" (click)="irALogin()">Login</ion-button>
 </ion-content>
