--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -8,9 +8,10 @@
 
 
   <div class="logo-container">
-    <img src="assets/imagenes/logo.png" alt="Logo" class="logo-img" />
-  </div>
-
+  <img src="assets\imagenes\aa8cd491-a400-4d12-9420-9a5b2e45da29.png" 
+  alt="Company logo featuring a stylized blue and green abstract shape centered on a white background, conveying a modern and welcoming atmosphere. No visible text." 
+  class="logo-img" />
+</div>
  
   <form [formGroup]="loginForm" (ngSubmit)="ingresar()">
 
