--- a/src/app/principal/principal.page.html
+++ b/src/app/principal/principal.page.html
@@ -12,5 +12,10 @@
 </div>
 
 
-  <ion-button expand="full" color="secondary" (click)="irALogin()">Login</ion-button>
+    <ion-button color="secondary" (click)="irALogin()">Login</ion-button>
 </ion-content>
+  <ion-footer>
+    <ion-toolbar>
+      <ion-title>ErikaMuñoz</ion-title>
+    </ion-toolbar>
+  </ion-footer>
