--- a/src/app/principal/principal.page.scss
+++ b/src/app/principal/principal.page.scss
@@ -10,3 +10,10 @@ width: 150px;
 height: auto;
 border-radius: 20px; 
 }
+
+.ion-button {
+display: flex;
+justify-content: center;
+align-items: center;
+margin-top: 20px;
+}
