agregando api caledargoogle

--- a/src/app/registro/registro.page.html
+++ b/src/app/registro/registro.page.html
@@ -1,6 +1,6 @@
 <ion-header>
 <ion-toolbar>
-<ion-title>Registro</ion-title>
+<ion-title>Registrate</ion-title>
 </ion-toolbar>
 </ion-header>
 
@@ -74,6 +74,6 @@
 
 <ion-button expand="block" (click)="mostrar()">Mostrar</ion-button>
 <ion-button expand="block" color="medium" (click)="limpiar()">Limpiar</ion-button>
-<ion-button expand="block" color="secondary" (click)="irALogin()">Login</ion-button>
+<ion-button expand="block" color="secondary" (click)="irALogin()">volver</ion-button>
 </div>
 </ion-content>
