--- a/src/app/calendario/calendario.page.html
+++ b/src/app/calendario/calendario.page.html
@@ -1,13 +1,41 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>Calendario</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
+<ion-menu contentId="main-content" type="overlay">
+  <ion-header>
     <ion-toolbar>
-      <ion-title size="large">Calendario</ion-title>
+      <ion-title>Menú</ion-title>
     </ion-toolbar>
   </ion-header>
-</ion-content>
+  <ion-content class="ion-padding">
+    <ion-item button (click)="irAPerfil()">Perfil</ion-item>
+    <ion-item button (click)="irAConfiguracion()">Configuración</ion-item>
+    <ion-item button (click)="irAHome()">Registrate</ion-item>
+  </ion-content>
+</ion-menu>
+
+
+<div class="ion-page" id="main-content">
+
+
+  <ion-header [translucent]="true">
+    <ion-toolbar>
+      <ion-buttons slot="start">
+        <ion-menu-button></ion-menu-button>
+      </ion-buttons>
+      <ion-title>Calendario</ion-title>
+    </ion-toolbar>
+  </ion-header>
+
+  
+  <ion-content [fullscreen]="true" class="ion-padding">
+    <ion-header collapse="condense">
+      <ion-toolbar>
+        <ion-title size="large">Calendario</ion-title>
+      </ion-toolbar>
+    </ion-header>
+
+    <full-calendar [options]="calendarOptions"></full-calendar>
+  </ion-content>
+
+  <ion-button expand="block" color="medium" (click)="volverLogin()">
+Volver al Login
+</ion-button>
+</div>
