--- a/src/app/perfil/perfil.page.html
+++ b/src/app/perfil/perfil.page.html
@@ -57,8 +57,8 @@ Eliminar
 </ion-button>
 
 
-<ion-button expand="block" color="medium" (click)="volverLogin()">
-Volver al Login
+<ion-button expand="block" color="medium" (click)="volverCalendario()">
+Volver al calendario
 </ion-button>
 
 </ion-content>
