--- a/src/app/calendario/calendario.page.html
+++ b/src/app/calendario/calendario.page.html
@@ -5,22 +5,25 @@
     </ion-toolbar>
   </ion-header>
   <ion-content class="ion-padding">
-    <ion-item button (click)="irAPerfil()">Perfil</ion-item>
-    <ion-item button (click)="irAConfiguracion()">Configuración</ion-item>
-    <ion-item button (click)="irAHome()">Registrate</ion-item>
+    <ion-item button [routerLink]="['/perfil']">Perfil</ion-item>
+    <ion-item button [routerLink]="['/configuracion']">Configuración</ion-item>
+    <ion-item button [routerLink]="['/registro']">Registrate</ion-item>
   </ion-content>
 </ion-menu>
 
 
 <div class="ion-page" id="main-content">
 
-
+  
   <ion-header [translucent]="true">
     <ion-toolbar>
       <ion-buttons slot="start">
         <ion-menu-button></ion-menu-button>
       </ion-buttons>
-      <ion-title>Calendario</ion-title>
+      <ion-title>Agenda</ion-title>
+      <ion-buttons slot="end">
+        <img src="assets/imagenes/aa8cd491-a400-4d12-9420-9a5b2e45da29.png" class="logo-header" alt="Logo" />
+      </ion-buttons>
     </ion-toolbar>
   </ion-header>
 
@@ -33,9 +36,9 @@
     </ion-header>
 
     <full-calendar [options]="calendarOptions"></full-calendar>
-  </ion-content>
 
-  <ion-button expand="block" color="medium" (click)="volverLogin()">
-Volver al Login
-</ion-button>
+    <ion-button expand="block" color="medium" (click)="volverLogin()">
+      Volver al Login
+    </ion-button>
+  </ion-content>
 </div>
